prob of profile fixing

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,6 +9,8 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link id="theme-css" rel="stylesheet" type="text/css" href="assets/theme/theme-blue.css">
   <link id="layout-css" rel="stylesheet" type="text/css" href="assets/layout/css/layout-blue.css">
+  <link rel="manifest" href="manifest.webmanifest">
+  <meta name="theme-color" content="#1976d2">
 </head>
 <body>
   <app-root>
@@ -24,5 +26,6 @@
       <li class="dot-i"></li>
     </ul>
   </app-root>
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
